decoreate result page

--- a/WebContent/resources/main.css
+++ b/WebContent/resources/main.css
@@ -8,9 +8,13 @@
     line-height:30px;
     background-color:#eeeeee;
     height:500px;
-    width:5%;
+    width:210px;
     float:left;
-    padding:5px;	      
+    padding:5px;
+}
+
+#criterialForm {
+        width: 200px;
 }
 
 #fo {
