--- a/WebContent/resources/main.css
+++ b/WebContent/resources/main.css
@@ -1,15 +1,60 @@
-#intro {
-    background-color:black;
-    color:white;
-    text-align:center;
-    padding:5px;	 
+body {
+	font-family: "Sans-serif";
 }
+
+#intro {
+	background-color: #474747;
+	color: #fff;
+	text-align: center;
+	padding: 5px;
+	text-shadow: #fff 0 0 10px;
+	background: black; /* For browsers that do not support gradients */
+	background: -webkit-linear-gradient(bottom, black, #0099e6);
+	/* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(top, black, #0099e6);
+	/* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(top, black, #0099e6);
+	/* For Firefox 3.6 to 15 */
+	background: linear-gradient(to top, black, #0099e6);
+	/* Standard syntax */
+}
+
+#login {
+	position: absolute;
+	left: 43%;
+	top: 40%;
+	height: 200px;
+	margin-top: -100px; /* half of you height */
+	width: 400px;
+	margin-left: -200px;
+}
+
+#button {
+	position: absolute;
+	left: 43%;
+	top: 80%;
+	height: 40px;
+	margin-top: -100px; /* half of you height */
+	width: 400px;
+	margin-left: -100px;
+}
+
 #sel {
-    line-height:30px;
-    background-color:#eeeeee;
-    padding:5px;
-    text-align:center;
-    width: 1265px;
+	line-height: 30px;
+	background-color: #eeeeee;
+	padding: 5px;
+	text-align: center;
+	width: 1265px;
+	color: #0099e6;
+	font-size: 20px;
+	background: grey; /* For browsers that do not support gradients */
+	background: -webkit-radial-gradient(#0099e6, black);
+	/* Safari 5.1 to 6.0 */
+	background: -o-radial-gradient(#0099e6, black);
+	/* For Opera 11.6 to 12.0 */
+	background: -moz-radial-gradient(#0099e6, black);
+	/* For Firefox 3.6 to 15 */
+	background: radial-gradient(#0099e6, black);
 }
 
 #fo {
@@ -22,29 +67,31 @@
 }
 
 #floating-panel {
-  position: absolute;
-  top: 10px;
-  left: 25%;
-  z-index: 5;
-  background-color: #fff;
-  padding: 5px;
-  border: 1px solid #999;
-  text-align: center;
-  font-family: 'Roboto','sans-serif';
-  line-height: 30px;
-  padding-left: 10px;
+	position: absolute;
+	top: 10px;
+	left: 25%;
+	z-index: 5;
+	background-color: #fff;
+	padding: 5px;
+	border: 1px solid #999;
+	text-align: center;
+	font-family: 'Roboto', 'sans-serif';
+	line-height: 30px;
+	padding-left: 10px;
 }
+
 #floating-panel {
-  position: absolute;
-  top: 5px;
-  left: 50%;
-  margin-left: -180px;
-  width: 350px;
-  z-index: 5;
-  background-color: #fff;
-  padding: 5px;
-  border: 1px solid #999;
+	position: absolute;
+	top: 5px;
+	left: 50%;
+	margin-left: -180px;
+	width: 350px;
+	z-index: 5;
+	background-color: #fff;
+	padding: 5px;
+	border: 1px solid #999;
 }
+
 #latlng {
-  width: 225px;
+	width: 225px;
 }
